fix: bug on firefox searchbar not centered

--- a/booki-starter-code/css/style.css
+++ b/booki-starter-code/css/style.css
@@ -549,8 +549,7 @@ footer section p {
 
     /* filtre */
     .search-container {
-        padding: 1em 1em 1em 1.7em;
-        margin-top: 1.6em;
+        justify-content: center;
     }
 
     .form-container {
